--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Test GitHub 1</h1>
     <h2>Hello</h2>
+    <img src="3.jpg" alt="test other file" height="300px">
 </body>
 </html>
