--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Test GitHub 1</h1>
     <h2>Hello</h2>
     <img src="3.jpg" alt="test other file" height="300px">
+    <b>UI design</b>
 </body>
 </html>
